Fixed issues detected by FindBugs.